Closed Bug 1674140 Opened 4 years ago Closed 4 years ago

Crash in [@ mozilla::net::WebrtcTCPSocket::Write]

Categories

(Core :: WebRTC: Networking, defect, P2)

Unspecified
macOS
defect

Tracking

()

RESOLVED FIXED
84 Branch
Tracking Status
firefox-esr78 --- wontfix
firefox82 --- wontfix
firefox83 --- wontfix
firefox84 --- fixed

People

(Reporter: sefeng, Assigned: bwc)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/109959c9-d17b-4939-8d69-973ca0201028

MOZ_CRASH Reason: MOZ_DIAGNOSTIC_ASSERT(false) (NS_SUCCEEDED(mSocketThread->Dispatch(NewRunnableMethod<nsTArray<uint8_t>&&>( "WebrtcTCPSocket::Write", this, &WebrtcTCPSocket::EnqueueWrite_s, std::move(aWriteData)))))

Top 10 frames of crashing thread:

0 XUL mozilla::net::WebrtcTCPSocket::Write dom/media/webrtc/transport/ipc/WebrtcTCPSocket.cpp:83
1 XUL mozilla::net::WebrtcTCPSocketParent::RecvWrite dom/media/webrtc/transport/ipc/WebrtcTCPSocketParent.cpp:41
2 XUL mozilla::net::PWebrtcTCPSocketParent::OnMessageReceived ipc/ipdl/PWebrtcTCPSocketParent.cpp:273
3 XUL mozilla::net::PSocketProcessParent::OnMessageReceived ipc/ipdl/PSocketProcessParent.cpp:2125
4 XUL mozilla::ipc::MessageChannel::DispatchMessage ipc/glue/MessageChannel.cpp:2074
5 XUL mozilla::ipc::MessageChannel::MessageTask::Run ipc/glue/MessageChannel.cpp:1953
6 XUL mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal xpcom/threads/TaskController.cpp:515
7 XUL mozilla::detail::RunnableFunction<mozilla::TaskController::InitializeInternal xpcom/threads/nsThreadUtils.h:577
8 XUL nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1197
9 XUL nsThread::Shutdown xpcom/threads/nsThread.cpp:898

Low frequent crash. Filing because it violated the expectation.

Component: WebRTC → WebRTC: Networking

:bwc Is this something you can take a look at?

Flags: needinfo?(docfaraday)

Looks like a shutdown crash. It is probably appropriate to remove the assertion, and replace with NS_WARN_IF.

Assignee: nobody → docfaraday
Flags: needinfo?(docfaraday)
Severity: -- → S3
Priority: -- → P2
Pushed by bcampen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/966c3db66902
Don't crash when we cannot dispatch to STS, since that can happen during shutdown. r=mjf
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: