Bug 1674140: Don't crash when we cannot dispatch to STS, since that can happen during shutdown. r=mjf

Differential Revision: https://phabricator.services.mozilla.com/D95565